# hermes-loom

./: .dockerignore  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  __init__.py  docker-compose.yml  hermes_plugin.toml  plugin.yaml  pyproject.toml
docs/: ARCHITECTURE.md  DEMO.md  DOC.md
hermes_loom/: __init__.py  __main__.py  api.py  cli.py  compiler.py  config.py  drift.py  hermes_state.py  ingest.py  ledger.py  memory_parser.py  observer.py  overrides.py  plugin.py  provenance.py  runtime.py  service.py  skill_origin.py  snapshot.py  soul.py  tagger.py
hermes_loom/ui/: app.js  i18n.js  index.html  loom-proto.css  loom-theme.css
scripts/: install-plugin.sh  uninstall-plugin.sh
tests/: base.py  test_api.py  test_compiler.py  test_drift.py  test_hold.py  test_ingest_provenance.py  test_ledger.py  test_memory_roundtrip.py  test_observer.py  test_overrides.py  test_packs_recall.py  test_plugin.py  test_prompts.py  test_records.py  test_runtime_status.py  test_skill_diff.py  test_skill_origin.py  test_snapshot.py  test_snapshot_provenance.py  test_soul.py  test_source_trace.py  test_status.py  test_tags_recall.py  ui_filter_test.js
ui/: app.js  index.html  loom-proto.css  loom-theme.css  styles.css
