[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-loom"
version = "0.1.0"
description = "Local growth-observability & tuning sidecar for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
# Intentionally ZERO runtime dependencies — stdlib only (sqlite3 + http.server),
# so the MVP runs on any machine that already runs Hermes, with no install step.
dependencies = []

[project.optional-dependencies]
# Only needed if you prefer FastAPI/uvicorn over the bundled stdlib server.
fastapi = ["fastapi>=0.110", "uvicorn>=0.27"]
test = []  # tests use stdlib unittest

[project.scripts]
hermes-loom = "hermes_loom.cli:main"

# NOTE: Hermes 0.16 discovers a plugin from $HERMES_HOME/plugins/<dir>/ via the
# repo-root `plugin.yaml` manifest + the root `__init__.py` `register(ctx)` — see
# README "Install the plugin". This package metadata is only for the standalone
# CLI/API/UI side of Loom.

[tool.setuptools]
packages = ["hermes_loom"]
