[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hermes-loom"
version = "0.1.0"
description = "Local growth-observability & tuning sidecar for Hermes Agent"
readme = "README.md"
requires-python = ">=3.10"
# Intentionally ZERO runtime dependencies — stdlib only (sqlite3 + http.server),
# so the MVP runs on any machine that already runs Hermes, with no install step.
dependencies = []

[project.optional-dependencies]
# Only needed if you prefer FastAPI/uvicorn over the bundled stdlib server.
fastapi = ["fastapi>=0.110", "uvicorn>=0.27"]
test = []  # tests use stdlib unittest

# Console script — the standalone service/CLI: `hermes-loom serve`, `sync`, etc.
[project.scripts]
hermes-loom = "hermes_loom.cli:main"

# Hermes plugin auto-discovery for a *pip-installed* Loom. Hermes scans this
# entry-point group (importlib.metadata) and calls the module's register(ctx).
# So `pip install hermes-loom` is enough — no copying into $HERMES_HOME/plugins/.
# (Directory install via the repo-root plugin.yaml + __init__.py still works too.)
[project.entry-points."hermes_agent.plugins"]
hermes-loom = "hermes_loom.plugin"

[project.urls]
Homepage = "https://github.com/cwentsai/hermes-loom"

[tool.setuptools]
packages = ["hermes_loom"]

# Ship the vanilla-JS UI (served by `hermes-loom serve`) inside the wheel.
[tool.setuptools.package-data]
hermes_loom = ["ui/*", "ui/**/*"]
